--- a/views/a-propos.pug
+++ b/views/a-propos.pug
@@ -6,26 +6,26 @@ block vars
 block content
   block contentAjax
     .column.small-12.large-6#target
-      h1 A propos de nous.
+      h1 A propos de nous
       p Graf'hit est une radio membre de la 
         a(href="http://ferarock.org") Ferarock.
         br
         | Retrouvez-nous sur 
         a(href="https://www.facebook.com/Radio.Grafhit") Facebook.
       h2 Nous contacter
-      p Téléphone :
-        br
+      h5.pTitle Téléphone :
+      p
         | 03 44 23 46 75
         br
         | 03 44 23 49 08
-      p Email :
-        br
+      h5.pTitle Email :
+      p
         | antenne (a) grafhit.net
-      p SMS :
-        br
+      h5.pTitle SMS :
+      p
         | 06 95 065 026
-      p Adresse* :
-        br
+      h5.pTitle Adresse* :
+      p
         | Graf'hit 
         br
         | BP 60319
@@ -34,8 +34,8 @@ block content
         br
         br
         | * Pour venir prendre l'escalier à partir du Parking de BF.
-      p Site réalisé avec passion lors d'un projet étudiant avec :
-        br
+      h5.pTitle Site réalisé avec passion lors d'un projet étudiant avec :
+      p
         | Emilie Confais
         br
         | Clément Henry
