--- a/views/_layout.pug
+++ b/views/_layout.pug
@@ -45,7 +45,7 @@ else
                     - var min = ("0" + m).slice(-2)
                     - var heure = h + ":" + min
                     option(value=heure) #{heure}
-                button#search.button.expanded.secondary Rechercher
+                button#search.button.expanded.secondary Rechercher un titre
                 p#searchResultsIntro.hide A cette heure il passait
                 ul#searchResults
       section#content.column.small-12.large-9
