--- a/views/grille-des-programmes.pug
+++ b/views/grille-des-programmes.pug
@@ -18,13 +18,13 @@ block content
             defaultView: "agendaWeek",
             lang: "fr",
             allDaySlot: false,
-            contentHeight: "auto",
+            scrollTime: "06:00:00",
             eventColor: "#777777",
             slotLabelFormat: "HH:mm",
             buttonText: { 
               today: "Aujourd'hui"
             },
-            columnFormat: "dddd",
+            columnFormat: "dddd DD",
             displayEventTime: false,
             timezone: false,
             eventRender: function(event, element) {
