--- a/views/podcasts.pug
+++ b/views/podcasts.pug
@@ -13,7 +13,7 @@ block content
       h2= category
       each podcast in podcasts
         if podcast.category == category
-          .media-object#podcast
+          .media-object.podcast
             .media-object-section
               .thumbnail(data-file=podcast.file, data-title=podcast.category)
                 img(src="/img/logo.png")
