--- a/views/_layout.pug
+++ b/views/_layout.pug
@@ -66,5 +66,7 @@ else
           source(src=config.STREAM_URL, type="audio/mpeg", data-streamurl=config.STREAM_URL)
 
       #scripts
+        script.
+          window.apiKey = "#{config.LASTFM_API_KEY}";
         script(src='/js/concat.js')
         script(src='/js/main.js')
