--- a/static/css/main.css
+++ b/static/css/main.css
@@ -243,7 +243,7 @@ progress::-webkit-progress-value {
 }
 
 .fc-event {
-  border: none;
+  border: 2px solid #777;
   border-radius: 0;
 }
 
@@ -253,6 +253,19 @@ progress::-webkit-progress-value {
 
 .fc-title {
   text-align: center;
+}
+
+.playProg {
+  width: 20px;
+  display: block;
+  margin: 6px;
+}
+
+.externalLink {
+  display: block;
+  margin: 6px;
+  color: #000;
+  text-align: left;
 }
 
 #progress:hover, .podcast .thumbnail:hover {
